3864.	[bug]		RPZ didn't work well when being used as forwarder.
			[RT #36060]

3862.	[cleanup]	Return immediately if we are not going to log the
			message in ns_client_dumpmessage.

3861.	[bug]		Benign missing isc_buffer_availablelength check in
			dns_message_pseudosectiontotext.  [RT #36078]

3860.	[bug]		ioctl(DP_POLL) array size needs to be determined
			at run time as it is limited to {OPEN_MAX}.
			[RT #35878]

3858.	[bug]		Disable GCC 4.9 "delete null pointer check".
			[RT #35968]

3857.	[bug]		Make it harder for a incorrect NOEDNS classification
			to be made. [RT #36020]

3855.	[bug]		Limit smoothed round trip time aging to no more than
			once a second. [RT #32909]

3854.	[cleanup]	Report unrecognized options, if any, in the final
			configure summary. [RT #36014]

3853.	[cleanup]	Refactor dns_rdataslab_fromrdataset to separate out
			the handling of a rdataset with no records. [RT #35968]

3849.	[doc]		Alphabetized dig's +options. [RT #35992]

3847.	[bug]		'configure --with-dlz-postgres' failed to fail when
			there is not support available.

3846.	[bug]		"dig +notcp ixfr=<serial>" should result in a UDP
			ixfr query. [RT #35980]

3844.	[bug]		Use the x64 version of the Microsoft Visual C++
			Redistributable when built for 64 bit Windows.
			[RT #35973]

3843.	[protocol]	Check EDNS EXPIRE option in dns_rdata_fromwire.
			[RT #35969]

3842.	[bug]		Adjust RRL log-only logging category. [RT #35945]

3841.	[cleanup]	Refactor zone.c:add_opt to use dns_message_buildopt.
			[RT #35924]

3840.	[port]		Check for arc4random_addrandom() before using it;
			it's been removed from OpenBSD 5.5. [RT #35907]

3839.	[test]		Use only posix-compatible shell in system tests.
			[RT #35625]

3838.	[protocol]	EDNS EXPIRE as been assigned a code point of 9.

3836.	[bug]		Address C++ keyword usage in header file.

3834.	[bug]		The re-signing heaps were not being updated soon enough
			leading to multiple re-generations of the same RRSIG