@@ -1,3 +1,6 @@
+3866.	[bug]		Named could die on disk full in generate_session_key.
+			[RT #36119]
+
 3864.	[bug]		RPZ didn't work well when being used as forwarder.
 			[RT #36060]
 
